<resources>
    <string name="app_name">SncksApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="list">Vending Machines</string>
    <string name="name">Name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="test1">Test1</string>
    <string name="remind_me">Remind Me</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="save">Save</string>
</resources>