<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvLine"
    android:layout_width="match_parent"
    android:layout_height="92dp"
    android:layout_margin="16dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/ivItemIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivItemIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="Test1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/tvPriceLabel"
            app:layout_constraintStart_toStartOf="@+id/tvPriceLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/test1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/tvQtyLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvQtyLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvQtyLabel" />

        <TextView
            android:id="@+id/tvQtyLabel"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:gravity="center_horizontal"
            android:text="@string/qty"
            app:layout_constraintEnd_toStartOf="@+id/tvPriceLabel"
            app:layout_constraintStart_toEndOf="@+id/tvItemName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPriceLabel"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:gravity="center_horizontal"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnReminder"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:paddingVertical="0dp"
            android:text="@string/remind_me"
            android:drawableLeft="@drawable/ic_baseline_notifications_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvItemName"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
